--- a/plots.ipynb
+++ b/plots.ipynb
@@ -38,6 +38,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "outputs": [
