--- a/plots.ipynb
+++ b/plots.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:22:55.797340Z",
-     "end_time": "2023-07-03T10:23:06.629488Z"
+     "start_time": "2023-07-03T14:44:43.988705Z",
+     "end_time": "2023-07-03T14:44:43.999775Z"
     }
    },
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "sample = pd.read_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/MAGPI_kinemetry_sample.csv\")\n",
@@ -45,14 +45,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:06.636432Z",
-     "end_time": "2023-07-03T10:23:06.769143Z"
+     "start_time": "2023-07-03T14:44:44.008745Z",
+     "end_time": "2023-07-03T14:44:44.273496Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
@@ -147,14 +147,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:06.781998Z",
-     "end_time": "2023-07-03T10:23:13.159603Z"
+     "start_time": "2023-07-03T14:44:44.275324Z",
+     "end_time": "2023-07-03T14:44:48.946181Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -170,14 +170,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:13.163000Z",
-     "end_time": "2023-07-03T10:23:13.343238Z"
+     "start_time": "2023-07-03T14:44:48.944849Z",
+     "end_time": "2023-07-03T14:44:48.955107Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
@@ -292,14 +292,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:13.177153Z",
-     "end_time": "2023-07-03T10:23:19.687147Z"
+     "start_time": "2023-07-03T14:44:49.070714Z",
+     "end_time": "2023-07-03T14:44:53.085144Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "sample = pd.read_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/MAGPI_kinemetry_sample_1Re.csv\")\n",
@@ -316,14 +316,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:19.690038Z",
-     "end_time": "2023-07-03T10:23:20.201919Z"
+     "start_time": "2023-07-03T14:44:53.083314Z",
+     "end_time": "2023-07-03T14:44:53.355114Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
@@ -374,14 +374,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:19.833856Z",
-     "end_time": "2023-07-03T10:23:21.569103Z"
+     "start_time": "2023-07-03T14:44:53.218759Z",
+     "end_time": "2023-07-03T14:44:54.559368Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
@@ -423,14 +423,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:21.632965Z",
-     "end_time": "2023-07-03T10:23:24.298335Z"
+     "start_time": "2023-07-03T14:44:54.557576Z",
+     "end_time": "2023-07-03T14:44:56.768147Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "s = pd.read_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/\"\n",
@@ -445,14 +445,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:24.299344Z",
-     "end_time": "2023-07-03T10:23:24.448150Z"
+     "start_time": "2023-07-03T14:44:56.766859Z",
+     "end_time": "2023-07-03T14:44:56.883662Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
@@ -482,14 +482,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:24.347009Z",
-     "end_time": "2023-07-03T10:23:25.769904Z"
+     "start_time": "2023-07-03T14:44:56.798923Z",
+     "end_time": "2023-07-03T14:44:57.754641Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
@@ -519,14 +519,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:25.775340Z",
-     "end_time": "2023-07-03T10:23:26.567299Z"
+     "start_time": "2023-07-03T14:44:57.757136Z",
+     "end_time": "2023-07-03T14:44:58.245360Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "env = pd.read_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/kinemetry_sample_env.csv\")\n",
@@ -562,14 +562,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:26.576637Z",
-     "end_time": "2023-07-03T10:23:26.738538Z"
+     "start_time": "2023-07-03T14:44:58.246322Z",
+     "end_time": "2023-07-03T14:44:58.357419Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
@@ -609,14 +609,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:26.748660Z",
-     "end_time": "2023-07-03T10:23:28.016329Z"
+     "start_time": "2023-07-03T14:44:58.362720Z",
+     "end_time": "2023-07-03T14:44:59.583519Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
@@ -656,14 +656,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:28.045773Z",
-     "end_time": "2023-07-03T10:23:29.325379Z"
+     "start_time": "2023-07-03T14:44:59.657662Z",
+     "end_time": "2023-07-03T14:45:00.608311Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
@@ -751,14 +751,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:29.326761Z",
-     "end_time": "2023-07-03T10:23:32.859834Z"
+     "start_time": "2023-07-03T14:45:00.607295Z",
+     "end_time": "2023-07-03T14:45:03.287285Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
@@ -776,14 +776,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:32.862378Z",
-     "end_time": "2023-07-03T10:23:32.870336Z"
+     "start_time": "2023-07-03T14:45:03.288809Z",
+     "end_time": "2023-07-03T14:45:03.467210Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
@@ -805,14 +805,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:32.877392Z",
-     "end_time": "2023-07-03T10:23:33.078059Z"
+     "start_time": "2023-07-03T14:45:03.328323Z",
+     "end_time": "2023-07-03T14:45:03.467848Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
@@ -833,14 +833,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:32.938330Z",
-     "end_time": "2023-07-03T10:23:33.681811Z"
+     "start_time": "2023-07-03T14:45:03.333005Z",
+     "end_time": "2023-07-03T14:45:03.996234Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
@@ -857,22 +857,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:33.684476Z",
-     "end_time": "2023-07-03T10:23:33.700476Z"
+     "start_time": "2023-07-03T14:45:04.000777Z",
+     "end_time": "2023-07-03T14:45:04.013209Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "outputs": [],
-   "source": [],
+   "source": [
+    "f = fits.open(\"/Volumes/LDS/Astro/PhD/MAGPI/MAGPI_Maps/MAGPI1201/Emission_Line/MAGPI1201057188_GIST_EmissionLines.fits\")"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T10:23:33.707537Z",
-     "end_time": "2023-07-03T10:23:33.855699Z"
+     "start_time": "2023-07-03T14:46:54.414987Z",
+     "end_time": "2023-07-03T14:46:54.452971Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
