--- a/plots.ipynb
+++ b/plots.ipynb
@@ -12,6 +12,8 @@
    },
    "outputs": [],
    "source": [
+    "import os.path\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats\n",
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "sample = pd.read_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/MAGPI_kinemetry_sample.csv\")\n",
@@ -45,14 +47,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T14:44:44.008745Z",
-     "end_time": "2023-07-03T14:44:44.273496Z"
+     "start_time": "2023-07-03T15:39:23.266779Z",
+     "end_time": "2023-07-03T15:39:23.818084Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
@@ -147,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-03T14:44:44.275324Z",
-     "end_time": "2023-07-03T14:44:48.946181Z"
+     "start_time": "2023-07-03T15:39:25.390636Z",
+     "end_time": "2023-07-03T15:39:37.246283Z"
     }
    }
   },
@@ -874,6 +876,31 @@
     "ExecuteTime": {
      "start_time": "2023-07-03T14:49:34.838540Z",
      "end_time": "2023-07-03T14:49:34.890996Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.exists(\"/Volumes/LDS/Astro/PhD/MAGPI/MAGPI_Maps/MAGPI1523/Emission_Line/MAGPI1523135170_GIST_EmissionLines.fits\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-03T15:23:07.558686Z",
+     "end_time": "2023-07-03T15:23:07.577880Z"
     }
    }
   },
