--- a/plots.ipynb
+++ b/plots.ipynb
@@ -350,6 +350,864 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57.5\n",
+      "112.5\n",
+      "118.5\n",
+      "123.5\n",
+      "124.5\n",
+      "197.5\n",
+      "197.5\n",
+      "201.5\n",
+      "252.5\n",
+      "358.5\n",
+      "219.5\n",
+      "229.5\n",
+      "233.5\n",
+      "314.5\n",
+      "278.5\n",
+      "302.5\n",
+      "124.5\n",
+      "209.5\n",
+      "253.5\n",
+      "297.5\n",
+      "156.5\n",
+      "159.5\n",
+      "161.5\n",
+      "201.5\n",
+      "217.5\n",
+      "266.5\n",
+      "190.5\n",
+      "193.5\n",
+      "197.5\n",
+      "221.5\n",
+      "40.5\n",
+      "81.5\n",
+      "94.5\n",
+      "230.5\n",
+      "303.5\n",
+      "337.5\n",
+      "338.5\n",
+      "53.5\n",
+      "70.5\n",
+      "76.5\n",
+      "81.5\n",
+      "87.5\n",
+      "103.5\n",
+      "153.5\n",
+      "196.5\n",
+      "247.5\n",
+      "287.5\n",
+      "60.5\n",
+      "152.5\n",
+      "195.5\n",
+      "195.5\n",
+      "126.5\n",
+      "198.5\n",
+      "276.5\n",
+      "305.5\n",
+      "71.5\n",
+      "198.5\n",
+      "236.5\n",
+      "71.5\n",
+      "90.5\n",
+      "153.5\n",
+      "96.5\n",
+      "299.5\n",
+      "347.5\n",
+      "213.5\n",
+      "331.5\n",
+      "47.5\n",
+      "205.5\n",
+      "232.5\n",
+      "242.5\n",
+      "283.5\n",
+      "93.5\n",
+      "97.5\n",
+      "196.5\n",
+      "197.5\n",
+      "289.5\n",
+      "305.5\n",
+      "317.5\n",
+      "354.5\n",
+      "30.5\n",
+      "262.5\n",
+      "331.5\n",
+      "46.5\n",
+      "110.5\n",
+      "111.5\n",
+      "200.5\n",
+      "276.5\n",
+      "47.5\n",
+      "69.5\n",
+      "117.5\n",
+      "151.5\n",
+      "159.5\n",
+      "196.5\n",
+      "205.5\n",
+      "225.5\n",
+      "243.5\n",
+      "291.5\n",
+      "305.5\n",
+      "322.5\n",
+      "376.5\n",
+      "130.5\n",
+      "270.5\n",
+      "136.5\n",
+      "169.5\n",
+      "247.5\n",
+      "137.5\n",
+      "144.5\n",
+      "140.5\n",
+      "153.5\n",
+      "158.5\n",
+      "217.5\n",
+      "300.5\n",
+      "301.5\n",
+      "338.5\n",
+      "34.5\n",
+      "34.5\n",
+      "69.5\n",
+      "90.5\n",
+      "93.5\n",
+      "77.5\n",
+      "92.5\n",
+      "94.5\n",
+      "105.5\n",
+      "122.5\n",
+      "149.5\n",
+      "94.5\n",
+      "98.5\n",
+      "111.5\n",
+      "167.5\n",
+      "217.5\n",
+      "266.5\n",
+      "103.5\n",
+      "316.5\n",
+      "128.5\n",
+      "181.5\n",
+      "197.5\n",
+      "189.5\n",
+      "203.5\n",
+      "244.5\n",
+      "250.5\n",
+      "250.5\n",
+      "247.5\n",
+      "275.5\n",
+      "249.5\n",
+      "317.5\n",
+      "48.5\n",
+      "72.5\n",
+      "107.5\n",
+      "114.5\n",
+      "132.5\n",
+      "135.5\n",
+      "142.5\n",
+      "182.5\n",
+      "201.5\n",
+      "301.5\n",
+      "366.5\n",
+      "108.5\n",
+      "197.5\n",
+      "109.5\n",
+      "167.5\n",
+      "124.5\n",
+      "133.5\n",
+      "145.5\n",
+      "227.5\n",
+      "149.5\n",
+      "154.5\n",
+      "217.5\n",
+      "219.5\n",
+      "247.5\n",
+      "250.5\n",
+      "292.5\n",
+      "350.5\n",
+      "298.5\n",
+      "313.5\n",
+      "46.5\n",
+      "89.5\n",
+      "224.5\n",
+      "287.5\n",
+      "131.5\n",
+      "135.5\n",
+      "189.5\n",
+      "197.5\n",
+      "257.5\n",
+      "152.5\n",
+      "206.5\n",
+      "208.5\n",
+      "224.5\n",
+      "231.5\n",
+      "168.5\n",
+      "205.5\n",
+      "275.5\n",
+      "279.5\n",
+      "32.5\n",
+      "83.5\n",
+      "83.5\n",
+      "48.5\n",
+      "101.5\n",
+      "115.5\n",
+      "135.5\n",
+      "150.5\n",
+      "176.5\n",
+      "178.5\n",
+      "180.5\n",
+      "196.5\n",
+      "224.5\n",
+      "259.5\n",
+      "276.5\n",
+      "299.5\n",
+      "323.5\n",
+      "339.5\n",
+      "185.5\n",
+      "214.5\n",
+      "216.5\n",
+      "187.5\n",
+      "321.5\n",
+      "51.5\n",
+      "121.5\n",
+      "197.5\n",
+      "208.5\n",
+      "258.5\n",
+      "277.5\n",
+      "71.5\n",
+      "225.5\n",
+      "96.5\n",
+      "101.5\n",
+      "151.5\n",
+      "153.5\n",
+      "224.5\n",
+      "268.5\n",
+      "316.5\n",
+      "293.5\n",
+      "326.5\n",
+      "115.5\n",
+      "273.5\n",
+      "282.5\n",
+      "321.5\n",
+      "185.5\n",
+      "197.5\n",
+      "208.5\n",
+      "215.5\n",
+      "220.5\n",
+      "279.5\n",
+      "237.5\n",
+      "291.5\n",
+      "316.5\n",
+      "345.5\n",
+      "46.5\n",
+      "192.5\n",
+      "81.5\n",
+      "188.5\n",
+      "203.5\n",
+      "293.5\n",
+      "136.5\n",
+      "176.5\n",
+      "197.5\n",
+      "187.5\n",
+      "237.5\n",
+      "214.5\n",
+      "230.5\n",
+      "298.5\n",
+      "328.5\n",
+      "349.5\n",
+      "68.5\n",
+      "82.5\n",
+      "106.5\n",
+      "106.5\n",
+      "111.5\n",
+      "211.5\n",
+      "221.5\n",
+      "279.5\n",
+      "325.5\n",
+      "83.5\n",
+      "86.5\n",
+      "180.5\n",
+      "183.5\n",
+      "71.5\n",
+      "89.5\n",
+      "124.5\n",
+      "130.5\n",
+      "74.5\n",
+      "86.5\n",
+      "112.5\n",
+      "79.5\n",
+      "80.5\n",
+      "114.5\n",
+      "84.5\n",
+      "190.5\n",
+      "103.5\n",
+      "196.5\n",
+      "211.5\n",
+      "232.5\n",
+      "121.5\n",
+      "128.5\n",
+      "170.5\n",
+      "125.5\n",
+      "209.5\n",
+      "273.5\n",
+      "288.5\n",
+      "296.5\n",
+      "149.5\n",
+      "194.5\n",
+      "284.5\n",
+      "222.5\n",
+      "337.5\n",
+      "336.5\n",
+      "339.5\n",
+      "34.5\n",
+      "76.5\n",
+      "79.5\n",
+      "102.5\n",
+      "110.5\n",
+      "112.5\n",
+      "128.5\n",
+      "133.5\n",
+      "206.5\n",
+      "266.5\n",
+      "60.5\n",
+      "71.5\n",
+      "75.5\n",
+      "78.5\n",
+      "61.5\n",
+      "107.5\n",
+      "117.5\n",
+      "119.5\n",
+      "152.5\n",
+      "197.5\n",
+      "204.5\n",
+      "191.5\n",
+      "205.5\n",
+      "217.5\n",
+      "224.5\n",
+      "232.5\n",
+      "262.5\n",
+      "304.5\n",
+      "268.5\n",
+      "292.5\n",
+      "296.5\n",
+      "354.5\n",
+      "323.5\n",
+      "339.5\n",
+      "39.5\n",
+      "41.5\n",
+      "72.5\n",
+      "135.5\n",
+      "149.5\n",
+      "293.5\n",
+      "303.5\n",
+      "343.5\n",
+      "135.5\n",
+      "211.5\n",
+      "160.5\n",
+      "181.5\n",
+      "160.5\n",
+      "197.5\n",
+      "241.5\n",
+      "283.5\n",
+      "161.5\n",
+      "177.5\n",
+      "199.5\n",
+      "174.5\n",
+      "271.5\n",
+      "210.5\n",
+      "255.5\n",
+      "277.5\n",
+      "243.5\n",
+      "301.5\n",
+      "248.5\n",
+      "319.5\n",
+      "321.5\n",
+      "117.5\n",
+      "139.5\n",
+      "120.5\n",
+      "123.5\n",
+      "197.5\n",
+      "204.5\n",
+      "229.5\n",
+      "231.5\n",
+      "367.5\n",
+      "265.5\n",
+      "285.5\n",
+      "292.5\n",
+      "301.5\n",
+      "303.5\n",
+      "118.5\n",
+      "141.5\n",
+      "181.5\n",
+      "307.5\n",
+      "172.5\n",
+      "176.5\n",
+      "181.5\n",
+      "208.5\n",
+      "190.5\n",
+      "303.5\n",
+      "197.5\n",
+      "226.5\n",
+      "356.5\n",
+      "239.5\n",
+      "239.5\n",
+      "258.5\n",
+      "307.5\n",
+      "261.5\n",
+      "280.5\n",
+      "299.5\n",
+      "311.5\n",
+      "323.5\n",
+      "39.5\n",
+      "170.5\n",
+      "196.5\n",
+      "231.5\n",
+      "246.5\n",
+      "266.5\n",
+      "349.5\n",
+      "58.5\n",
+      "67.5\n",
+      "116.5\n",
+      "125.5\n",
+      "155.5\n",
+      "184.5\n",
+      "195.5\n",
+      "162.5\n",
+      "171.5\n",
+      "183.5\n",
+      "205.5\n",
+      "207.5\n",
+      "231.5\n",
+      "244.5\n",
+      "256.5\n",
+      "292.5\n",
+      "333.5\n",
+      "336.5\n",
+      "334.5\n",
+      "335.5\n",
+      "120.5\n",
+      "139.5\n",
+      "143.5\n",
+      "141.5\n",
+      "212.5\n",
+      "160.5\n",
+      "187.5\n",
+      "168.5\n",
+      "247.5\n",
+      "173.5\n",
+      "196.5\n",
+      "357.5\n",
+      "180.5\n",
+      "210.5\n",
+      "264.5\n",
+      "227.5\n",
+      "227.5\n",
+      "315.5\n",
+      "239.5\n",
+      "268.5\n",
+      "311.5\n",
+      "313.5\n",
+      "323.5\n",
+      "324.5\n",
+      "32.5\n",
+      "54.5\n",
+      "32.5\n",
+      "130.5\n",
+      "249.5\n",
+      "78.5\n",
+      "300.5\n",
+      "79.5\n",
+      "197.5\n",
+      "204.5\n",
+      "220.5\n",
+      "310.5\n",
+      "93.5\n",
+      "97.5\n",
+      "114.5\n",
+      "159.5\n",
+      "169.5\n",
+      "234.5\n",
+      "215.5\n",
+      "251.5\n",
+      "266.5\n",
+      "75.5\n",
+      "81.5\n",
+      "110.5\n",
+      "90.5\n",
+      "173.5\n",
+      "173.5\n",
+      "177.5\n",
+      "97.5\n",
+      "127.5\n",
+      "123.5\n",
+      "145.5\n",
+      "187.5\n",
+      "198.5\n",
+      "198.5\n",
+      "230.5\n",
+      "240.5\n",
+      "274.5\n",
+      "213.5\n",
+      "283.5\n",
+      "225.5\n",
+      "227.5\n",
+      "238.5\n",
+      "345.5\n",
+      "256.5\n",
+      "284.5\n",
+      "69.5\n",
+      "73.5\n",
+      "70.5\n",
+      "72.5\n",
+      "93.5\n",
+      "183.5\n",
+      "261.5\n",
+      "322.5\n",
+      "84.5\n",
+      "182.5\n",
+      "197.5\n",
+      "272.5\n",
+      "332.5\n",
+      "87.5\n",
+      "107.5\n",
+      "113.5\n",
+      "125.5\n",
+      "136.5\n",
+      "149.5\n",
+      "105.5\n",
+      "217.5\n",
+      "125.5\n",
+      "159.5\n",
+      "240.5\n",
+      "255.5\n",
+      "341.5\n",
+      "349.5\n",
+      "40.5\n",
+      "114.5\n",
+      "118.5\n",
+      "122.5\n",
+      "126.5\n",
+      "127.5\n",
+      "161.5\n",
+      "258.5\n",
+      "168.5\n",
+      "212.5\n",
+      "176.5\n",
+      "197.5\n",
+      "234.5\n",
+      "302.5\n",
+      "305.5\n",
+      "311.5\n",
+      "303.5\n",
+      "335.5\n",
+      "41.5\n",
+      "70.5\n",
+      "85.5\n",
+      "109.5\n",
+      "112.5\n",
+      "118.5\n",
+      "135.5\n",
+      "149.5\n",
+      "153.5\n",
+      "176.5\n",
+      "208.5\n",
+      "224.5\n",
+      "250.5\n",
+      "263.5\n",
+      "284.5\n",
+      "291.5\n",
+      "302.5\n",
+      "302.5\n",
+      "337.5\n",
+      "360.5\n",
+      "42.5\n",
+      "54.5\n",
+      "50.5\n",
+      "68.5\n",
+      "82.5\n",
+      "194.5\n",
+      "198.5\n",
+      "207.5\n",
+      "240.5\n",
+      "274.5\n",
+      "186.5\n",
+      "261.5\n",
+      "288.5\n",
+      "213.5\n",
+      "286.5\n",
+      "309.5\n",
+      "311.5\n",
+      "356.5\n",
+      "218.5\n",
+      "239.5\n",
+      "282.5\n",
+      "246.5\n",
+      "253.5\n",
+      "255.5\n",
+      "64.5\n",
+      "109.5\n",
+      "91.5\n",
+      "139.5\n",
+      "101.5\n",
+      "155.5\n",
+      "126.5\n",
+      "181.5\n",
+      "167.5\n",
+      "196.5\n",
+      "257.5\n",
+      "262.5\n",
+      "266.5\n",
+      "269.5\n",
+      "269.5\n",
+      "285.5\n",
+      "288.5\n",
+      "290.5\n",
+      "321.5\n",
+      "338.5\n",
+      "339.5\n",
+      "216.5\n",
+      "363.5\n",
+      "238.5\n",
+      "250.5\n",
+      "55.5\n",
+      "70.5\n",
+      "65.5\n",
+      "196.5\n",
+      "197.5\n",
+      "205.5\n",
+      "227.5\n",
+      "265.5\n",
+      "280.5\n",
+      "301.5\n",
+      "88.5\n",
+      "110.5\n",
+      "163.5\n",
+      "269.5\n",
+      "192.5\n",
+      "220.5\n",
+      "233.5\n",
+      "266.5\n",
+      "273.5\n",
+      "300.5\n",
+      "47.5\n",
+      "82.5\n",
+      "145.5\n",
+      "48.5\n",
+      "205.5\n",
+      "208.5\n",
+      "81.5\n",
+      "171.5\n",
+      "96.5\n",
+      "198.5\n",
+      "137.5\n",
+      "197.5\n",
+      "141.5\n",
+      "221.5\n",
+      "302.5\n",
+      "190.5\n",
+      "213.5\n",
+      "246.5\n",
+      "220.5\n",
+      "225.5\n",
+      "324.5\n",
+      "232.5\n",
+      "268.5\n",
+      "296.5\n",
+      "318.5\n",
+      "45.5\n",
+      "196.5\n",
+      "279.5\n",
+      "76.5\n",
+      "123.5\n",
+      "80.5\n",
+      "107.5\n",
+      "104.5\n",
+      "119.5\n",
+      "175.5\n",
+      "186.5\n",
+      "223.5\n",
+      "295.5\n",
+      "225.5\n",
+      "266.5\n",
+      "352.5\n",
+      "330.5\n",
+      "333.5\n",
+      "40.5\n",
+      "40.5\n",
+      "63.5\n",
+      "118.5\n",
+      "124.5\n",
+      "131.5\n",
+      "151.5\n",
+      "197.5\n",
+      "217.5\n",
+      "246.5\n",
+      "250.5\n",
+      "340.5\n",
+      "343.5\n",
+      "94.5\n",
+      "148.5\n",
+      "226.5\n",
+      "190.5\n",
+      "232.5\n",
+      "192.5\n",
+      "232.5\n",
+      "271.5\n",
+      "272.5\n",
+      "274.5\n",
+      "342.5\n",
+      "91.5\n",
+      "123.5\n",
+      "130.5\n",
+      "144.5\n",
+      "150.5\n",
+      "160.5\n",
+      "177.5\n",
+      "97.5\n",
+      "111.5\n",
+      "334.5\n",
+      "340.5\n",
+      "105.5\n",
+      "109.5\n",
+      "111.5\n",
+      "134.5\n",
+      "139.5\n",
+      "116.5\n",
+      "127.5\n",
+      "191.5\n",
+      "203.5\n",
+      "250.5\n",
+      "296.5\n",
+      "210.5\n",
+      "216.5\n",
+      "227.5\n",
+      "228.5\n",
+      "241.5\n",
+      "244.5\n",
+      "285.5\n",
+      "299.5\n",
+      "361.5\n",
+      "276.5\n",
+      "328.5\n",
+      "283.5\n",
+      "290.5\n",
+      "36.5\n",
+      "59.5\n",
+      "63.5\n",
+      "83.5\n",
+      "145.5\n",
+      "182.5\n",
+      "197.5\n",
+      "203.5\n",
+      "207.5\n",
+      "228.5\n",
+      "267.5\n",
+      "355.5\n",
+      "46.5\n",
+      "49.5\n",
+      "94.5\n",
+      "258.5\n",
+      "313.5\n",
+      "35.5\n",
+      "97.5\n",
+      "63.5\n",
+      "76.5\n",
+      "129.5\n",
+      "151.5\n",
+      "168.5\n",
+      "181.5\n",
+      "186.5\n",
+      "198.5\n",
+      "198.5\n",
+      "248.5\n",
+      "250.5\n",
+      "254.5\n",
+      "258.5\n",
+      "268.5\n",
+      "295.5\n",
+      "207.5\n",
+      "211.5\n",
+      "219.5\n",
+      "227.5\n",
+      "265.5\n",
+      "292.5\n",
+      "278.5\n",
+      "296.5\n",
+      "298.5\n",
+      "302.5\n",
+      "37.5\n",
+      "118.5\n",
+      "57.5\n",
+      "91.5\n",
+      "120.5\n",
+      "167.5\n",
+      "137.5\n",
+      "167.5\n",
+      "199.5\n",
+      "262.5\n",
+      "293.5\n",
+      "313.5\n",
+      "330.5\n",
+      "149.5\n",
+      "230.5\n",
+      "184.5\n",
+      "336.5\n",
+      "212.5\n",
+      "275.5\n",
+      "260.5\n",
+      "299.5\n",
+      "275.5\n",
+      "335.5\n",
+      "279.5\n",
+      "310.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = pd.read_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/kinemetry_sample_env.csv\")\n",
+    "\n",
+    "master = pd.read_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/\"\n",
+    "                     \"MAGPI_master_source_catalogue.csv\",skiprows=16)\n",
+    "from astropy.cosmology import Planck18 as cosmo\n",
+    "import astropy.units as u\n",
+    "#master = master[master[\"MAGPIID\"].isin(sample[\"MAGPIID\"])]\n",
+    "gal = np.zeros(len(env))\n",
+    "d1_ = np.zeros(len(env))\n",
+    "for i in range(len(env)):\n",
+    "    group = env[env['GroupName'].isin([env[\"GroupName\"].to_numpy()[i]])]\n",
+    "    group_master = master[master[\"MAGPIID\"].isin(group[\"MAGPIID\"])]\n",
+    "    #print([env_sample['MAGPIID'].to_numpy()[i]])\n",
+    "    sample_master = master[master['MAGPIID'].isin([env['MAGPIID'].to_numpy()[i]])]\n",
+    "    x = group_master[\"xmax\"].to_numpy()\n",
+    "    y = group_master[\"ymax\"].to_numpy()\n",
+    "    #print(x,y)\n",
+    "    x0 = sample_master[\"xmax\"].to_numpy()[0]\n",
+    "    y0 = sample_master[\"ymax\"].to_numpy()[0]\n",
+    "    z = sample_master[\"z\"].to_numpy()[0]\n",
+    "    gal[i] = sample_master[\"MAGPIID\"].to_numpy()[0]\n",
+    "    #print(x0,y0)\n",
+    "    d1 = np.sqrt((x-x0)**2 + (y-y0)**2)\n",
+    "    d1 = np.min(d1[d1>0])\n",
+    "    cd = cosmo.comoving_distance(z).to(u.kpc).value\n",
+    "    d1 = np.radians(d1*(0.2/3600))\n",
+    "    d1 = d1*cd\n",
+    "    d1_[i] = d1\n",
+    "env[\"d1,kpc\"] = d1_\n",
+    "env.to_csv(\"/Users/ryanbagge/Library/CloudStorage/OneDrive-UNSW/MAGPI_csv/kinemetry_sample_env.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-06T18:13:03.133525Z",
+     "end_time": "2023-07-06T18:13:05.193151Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
