--- a/plots.ipynb
+++ b/plots.ipynb
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "import os.path\n",
+    "`import os.path\n",
     "\n",
     "import astropy.table\n",
     "import numpy as np\n",
